--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -17,7 +17,7 @@ h1{
         text-indent: 50px;
     
 }
-#exampleModalLong{
+#assigntable{
     color: black;
 }
 #adults{
@@ -51,5 +51,11 @@ h1{
 font-size: 10px;
 }
 #modals{
+    color: black;
+}
+.restTables{
+    width: 50px;
+}
+#modal2{
     color: black;
 }
