--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -110,14 +110,18 @@ thead {
     background-color: #90979f;
     color: #ffffff;
     font-weight: bold;
+    font-size: 15px;
 }
 
 thead .serverName {
     background-color: #ffffff;
     color: #333333;
     font-weight: bold;
-    padding: 0 20px 0 10px;
+    padding: 0 20px 6px 10px;
     width: 200px;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 18px;
 }
 
 thead .serverOffShift {
@@ -164,7 +168,7 @@ tbody {
     margin: 10px 0 0 8px;
 }
 
-.tableButton .seatedPatrons {
+.tableButton .seatedGuests {
     margin: 12px 0 0 14px;
 }
 
@@ -177,8 +181,9 @@ tbody {
     filter: alpha(opacity=90);
     zoom: 1;
     width: 100%;
-    padding: 0;
+    padding: 5px 0;
     margin: 0;
+    text-align: center;
 }
 
 
@@ -237,7 +242,7 @@ tbody {
 label {
     font-size: 18px;
     color: #333333;
-    margin: 0 0 5px 0;
+    margin: 5px 0 5px 0;
 }
 
 input {
@@ -251,9 +256,10 @@ input {
   position: static;
   overflow: visible;
   height: 400px;
-  width: 720px;
+  width: 100%;
   margin: 0px auto;
   margin-top: 20px;
+  border: 2px solid #cccccc;
 }
 
 #imgid {
@@ -281,12 +287,10 @@ input {
 
 .btn-secondary {
     height: 50px;
-    width: 148px;
+    width: 158px;
     font-size: 24px;
-    margin: 22px 0 0 25px;
-
+    margin: 30px 0 0 25px;
 }
-
 
 .formy {
     border-bottom: 2px solid #999999;   
@@ -295,8 +299,13 @@ input {
     border-radius: 0;
 }
 
-#inputCity {
-    clear: both;
+h4 {
+    margin: 20px 0;
+    color: #666666;
+}
+
+.modal-footer {
+    margin: 20px 0 0 0;
 }
 
 
