--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,10 +1,10 @@
-/* 
+/*
 04 css :: chris cote
 */
 
 html {
     margin: 0;
-	padding: 0;
+    padding: 0;
     height: 100%;
 }
 
@@ -25,7 +25,7 @@ body {
 .header {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    border: 2px solid #999999;            
+    border: 2px solid #999999;
     background-color: #ffffff;
     opacity: 0.9;
     filter: alpha(opacity=90);
@@ -38,7 +38,7 @@ body {
 
 .weather {
     margin: 20px 0 0 0;
-    padding: 0;    
+    padding: 0;
 }
 
 .time {
@@ -49,7 +49,7 @@ body {
     color: #666666;
 }
 
-.overview{
+.overview {
     margin: 5px 0 0 0;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
@@ -68,17 +68,15 @@ body {
     clear: both;
 }
 
-
-
 .panel {
     border-left: 2px solid #999999;
-    border-right: 2px solid #999999;    
+    border-right: 2px solid #999999;
     background-color: #ffffff;
     margin: 0;
     padding: 10px 0 20px 20px;
     opacity: 0.9;
     filter: alpha(opacity=90);
-    zoom: 1;   
+    zoom: 1;
     border-radius: 0;
     min-height: 200px;
 }
@@ -92,13 +90,12 @@ body {
     min-height: 200px;
     opacity: 1.0;
     filter: alpha(opacity=100);
-    zoom: 1;   
+    zoom: 1;
     border-radius: 0;
     border-top: 2px solid #999999;
     margin: 20px 0 0 0;
     padding: 20px 0;
 }
-
 
 .table {
     margin: 25px 0;
@@ -134,7 +131,7 @@ thead .serverOffShift {
 }
 
 thead .serverStats {
-    background: url(../img/bgServerStats.png) no-repeat left;     
+    background: url(../img/bgServerStats.png) no-repeat left;
     text-align: center;
     width: 40px;
     color: #ffffff;
@@ -149,7 +146,7 @@ tbody {
 
 .tableButton {
     float: left;
-    background: url(../img/bgTableButton.png) no-repeat left;     
+    background: url(../img/bgTableButton.png) no-repeat left;
     height: 60px;
     width: 60px;
     font-size: 12px;
@@ -160,10 +157,11 @@ tbody {
 }
 
 .tableButton:hover {
-    background: url(../img/bgTableButton_hover.png) no-repeat left; 
-    text-decoration: none;    
+    background: url(../img/bgTableButton_hover.png) no-repeat left;
+    text-decoration: none;
     color: #333333;
 }
+
 .tableButton .tableNumber {
     margin: 10px 0 0 8px;
 }
@@ -175,7 +173,7 @@ tbody {
 .footer {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    border: 2px solid #999999;  
+    border: 2px solid #999999;
     background-color: #ffffff;
     opacity: 0.9;
     filter: alpha(opacity=90);
@@ -185,7 +183,6 @@ tbody {
     margin: 0;
     text-align: center;
 }
-
 
 .weatherChannel a {
     background-image: url(../img/weatherChannel.png);
@@ -206,7 +203,7 @@ tbody {
     width: 60px;
     display: block;
     float: right;
-    margin: 10px 30px 0 0; 
+    margin: 10px 30px 0 0;
 }
 
 .googleMaps a:hover {
@@ -219,7 +216,7 @@ tbody {
     width: 60px;
     display: block;
     float: right;
-    margin: 10px 30px 0 0; 
+    margin: 10px 30px 0 0;
 }
 
 .serverAdmin a:hover {
@@ -232,7 +229,7 @@ tbody {
     width: 60px;
     display: block;
     float: right;
-    margin: 10px 30px 0 0;   
+    margin: 10px 30px 0 0;
 }
 
 .viewWaitList a:hover {
@@ -253,26 +250,26 @@ input {
 }
 
 #map {
-  position: static;
-  overflow: visible;
-  height: 400px;
-  width: 100%;
-  margin: 0px auto;
-  margin-top: 20px;
-  border: 2px solid #cccccc;
+    position: static;
+    overflow: visible;
+    height: 400px;
+    width: 100%;
+    margin: 0px auto;
+    margin-top: 20px;
+    border: 2px solid #cccccc;
 }
 
 #imgid {
     float: left;
     margin: 2px 0 0 20px;
     height: 40px;
-    width: 40px;    
+    width: 40px;
 }
 
 .temp {
     float: left;
     margin: 0;
-    padding: 10px 0 0 0;    
+    padding: 10px 0 0 0;
 }
 
 .guestInfo {
@@ -293,9 +290,9 @@ input {
 }
 
 .formy {
-    border-bottom: 2px solid #999999;   
+    border-bottom: 2px solid #999999;
     background-color: #cccccc;
-    min-height: 120px;  
+    min-height: 120px;
     border-radius: 0;
 }
 
@@ -308,16 +305,6 @@ h4 {
     margin: 20px 0 0 0;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+.tablenum {
+    margin: 10px;
+}
